add more utils to badges api, support for firefox
made it build for firefox
added addUserProfile function to badges api
removed test plugin 
patched lag when opening context menu's

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "types": "@types/HappyCord.d.ts",
   "scripts": {
-    "build": "node ./build.js && node ./fix.js"
+    "build": "node ./removeDistFolder.js && node ./build.js && node ./combine.js && node ./removeDistFolder.js "
   },
   "devDependencies": {
     "@babel/cli": "^7.23.9",
